// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"TextLink" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <a
    className="css-207ys5-TextLink"
    rel="noopener noreferrer"
  >
    TextLink
  </a>
</div>
`;

exports[`"TextLink" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <a
    className="css-207ys5-TextLink"
    rel="noopener noreferrer"
  >
    TextLink
  </a>
</div>
`;
